external-charts/serial-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serial-gateway
  labels:
    app: serial-gateway
spec:
  selector:
    app: serial-gateway
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
