external-charts/serial-gateway/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: serial-gateway
spec:
  parentRefs:
  - name: cafe-gateway
    namespace: istio-system
    sectionName: https-serial-gateway
  rules:
  - backendRefs:
    - name: serial-gateway
      weight: 1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: serial-gateway-http-redirect
spec:
  parentRefs:
  - name: cafe-gateway
    namespace: istio-system
    sectionName: http-serial-gateway
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
